--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TheMovieApp</string>
+    <string name="search_title">Search title</string>
+    <string name="search_hint">Search Movies..</string>
 </resources>
